@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.2 2013-02-05 00:23:49 karl Exp $
+# $Id: GNUmakefile,v 1.3 2013-02-07 18:14:46 karl Exp $
 # Sample Makefile to build Texinfo from the Perl POD documentation,
 # using pod2texi.
 #
@@ -19,12 +19,14 @@ texi_pod_subdir = $(texi_pod_doc)
 
 texinfo_srcdir = $(shell cd ../../ && pwd)
 pod2texi = perl $(texinfo_srcdir)/Pod-Simple-Texinfo/pod2texi.pl
-pod2texi_args = --base-level=section
+pod2texi_args  = --base-level=section
+pod2texi_args += --preamble=''  # we want our own
+pod2texi_args += --subdir=$(texi_pod_subdir)
 
 # Unfortunately have to use --no-validate since not all the names and
 # L<references> match up.  Split HTML by chapter is the natural thing here.
 gendocs_args  = --email bug-texinfo@gnu.org
-gendocs_args  = --common "--no-warn --no-validate"
+gendocs_args += --common "--no-warn --no-validate"
 gendocs_args += --split chapter
 gendocs_args += --no-ascii
 gendocs_args += --source $(texi_pod_subdir)
@@ -39,7 +41,7 @@ $(texi_pod_doc_incl): $(perl_pod_subdir)/*.pod
 # we omit the numerous delta pods, which are uninteresting when searching
 # (and take tons of time and space).
 	cd $(perl_pod_subdir) \
-	&& $(pod2texi) -o $@ --subdir=$(texi_pod_subdir) $(pod2texi_args) \
+	&& $(pod2texi) -o $@ $(pod2texi_args) \
 	  `ls *.pod | fgrep -v delta` \
 	&& mv $(texi_pod_subdir) $@ ../..
 
